--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <h1>Steffen's Rasterization Method Calculator</h1>
+        <h1>Steffen's Rasterization Method Calculator (EXTREMELY UNTESTED)</h1>
         <table>
             <tr>
                 <th>Point 0</th>
@@ -102,58 +102,48 @@
         <button id="calc" onclick="calc()">Calculate!</button>
         <br><br>
         <table>
-            <tr>        
-                <table>
-                    <tr>
-                        <td>C1: <span id="c1">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C2_r: <span id="c2_r">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C2_g <span id="c2_g">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C2_b: <span id="c2_b">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C3_r: <span id="c3_r">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C3_g: <span id="c3_g">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C3_b: <span id="c3_b">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C4: <span id="c4">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C5_r: <span id="c5_r">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C5_g: <span id="c5_g">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C5_b: <span id="c5_b">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C6_r: <span id="c6_r">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C6_g: <span id="c6_g">xxx</span></td>
-                    </tr>
-                    <tr>
-                        <td>C6_b: <span id="c6_b">xxx</span></td>
-                    </tr>
-                </table>
+            <tr>
+                <td>C1: <span id="c1">xxx</span></td>
             </tr>
             <tr>
-                <table>
-                    <tr>A: <span id="a">xxx</span></tr>
-                </table>
+                <td>C2_r: <span id="c2_r">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C2_g <span id="c2_g">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C2_b: <span id="c2_b">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C3_r: <span id="c3_r">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C3_g: <span id="c3_g">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C3_b: <span id="c3_b">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C4: <span id="c4">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C5_r: <span id="c5_r">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C5_g: <span id="c5_g">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C5_b: <span id="c5_b">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C6_r: <span id="c6_r">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C6_g: <span id="c6_g">xxx</span></td>
+            </tr>
+            <tr>
+                <td>C6_b: <span id="c6_b">xxx</span></td>
             </tr>
         </table>
-
     </body>
 </html>
