--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
     <head>
         <script src="index.js"></script>
         <style>
-            table, th, td {
-                border: 1px solid black;
+            * {
+                box-sizing: border-box;
+            }
+            .row{
+                margin-left:-5px;
+                margin-right:-5px;
+            }
+            .column{
+                float: left;
+                padding: 5px;
+            }
+            .row::after {
+                content: "";
+                clear: both;
+                display: table;
+            }
+            table {
+                border-collapse: collapse;
+                border-spacing: 0;
+                border: 1px solid rgb(0, 0, 0);
+            }
+            th, td {
+                text-align: left;
+                border: 1px solid rgb(0, 0, 0);
             }
         </style>
     </head>
@@ -88,7 +110,7 @@
                     <label for="b0">b0:</label>
                     <input type="number" id="b0" name="b0" value=0>
                 </td>
-                <td>
+                <td>    
                     <label for="b1">b1:</label>
                     <input type="number" id="b1" name="b1" value=0>
                 </td>
@@ -101,49 +123,68 @@
         </table>
         <button id="calc" onclick="calc()">Calculate!</button>
         <br><br>
-        <table>
-            <tr>
-                <td>C1: <span id="c1">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C2_r: <span id="c2_r">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C2_g <span id="c2_g">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C2_b: <span id="c2_b">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C3_r: <span id="c3_r">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C3_g: <span id="c3_g">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C3_b: <span id="c3_b">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C4: <span id="c4">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C5_r: <span id="c5_r">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C5_g: <span id="c5_g">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C5_b: <span id="c5_b">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C6_r: <span id="c6_r">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C6_g: <span id="c6_g">xxx</span></td>
-            </tr>
-            <tr>
-                <td>C6_b: <span id="c6_b">xxx</span></td>
-            </tr>
-        </table>
+
+        <div class="row">
+            <div class="column">        
+                <table>
+                    <tr>
+                        <td>C1: <span id="c1">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C2_r: <span id="c2_r">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C2_g <span id="c2_g">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C2_b: <span id="c2_b">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C3_r: <span id="c3_r">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C3_g: <span id="c3_g">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C3_b: <span id="c3_b">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C4: <span id="c4">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C5_r: <span id="c5_r">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C5_g: <span id="c5_g">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C5_b: <span id="c5_b">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C6_r: <span id="c6_r">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C6_g: <span id="c6_g">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C6_b: <span id="c6_b">xxx</span></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="column">        
+                <table>
+                    <tr>
+                        <td>A: <span id="a">xxx</span></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+
+
+
+
+
+
     </body>
 </html>
