added more fields

--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@
                     <tr>
                         <td>A: <span id="a">xxx</span></td>
                     </tr>
+                    <tr>
+                        <td>C7: <span id="c7">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C8: <span id="c8">xxx</span></td>
+                    </tr>
+                    <tr> 
+                        <td>A_p: <span id="a_p">xxx</span></td>
+                    </tr>  
+                    <tr>
+                        <td>In Bounds? <span id="ib"></span></td>
+                    </tr>
                 </table>
             </div>
         </div>
