--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Steffen's Rasterization Method Calculator</title>
+        <link rel="icon" type="image/png" href="favicon.png"/>
         <script src="index.js"></script>
         <style>
             * {
