now with fun triangle

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Steffen's Rasterization Method Calculator</title>
         <link rel="icon" type="image/png" href="favicon.png"/>
+        <script type="text/javascript" src="graphics.js"></script>
+        <script type="text/javascript" src="math.js"></script>
         <script src="index.js"></script>
         <style>
             * {
@@ -192,13 +194,10 @@
                     </tr>
                 </table>
             </div>
+            <div class="column">
+                <canvas id= "canvas" width="1000" height="1000"></canvas>
+            </div>
         </div>
-
-
-
-
-
-
 
     </body>
 </html>
