Added step and min/max to number inputs

--- a/index.html
+++ b/index.html
@@ -46,81 +46,81 @@
             <tr>
                 <td>
                     <label for="x0">x0:</label>
-                    <input type="number" id="x0" name="x0" value=50>
+                    <input type="number" step="0.01" min="0" max="1000" id="x0" name="x0" value=50>
                 </td>
                 <td>
                     <label for="x1">x1:</label>
-                    <input type="number" id="x1" name="x1" value=100>
+                    <input type="number" step="0.01" min="0" max="1000" id="x1" name="x1" value=100>
                 </td>
                 <td>
                     <label for="x2">x2:</label>
-                    <input type="number" id="x2" name="x2" value=0>
+                    <input type="number" step="0.01" min="0" max="1000" id="x2" name="x2" value=0>
                 </td>
                 <td>
                     <label for="xp">xp:</label>
-                    <input type="number" id="xp" name="xp" value=50>
+                    <input type="number" step="0.01" min="0" max="1000" id="xp" name="xp" value=50>
                 </td>
             </tr>
             <tr>
                 <td>
                     <label for="y0">y0:</label>
-                    <input type="number" id="y0" name="y0" value=0>
+                    <input type="number" step="0.01" min="0" max="1000" id="y0" name="y0" value=0>
                 </td>
                 <td>
                     <label for="y1">y1:</label>
-                    <input type="number" id="y1" name="y1" value=100>
+                    <input type="number" step="0.01" min="0" max="1000" id="y1" name="y1" value=100>
                 </td>
                 <td>
                     <label for="y2">y2:</label>
-                    <input type="number" id="y2" name="y2" value=100>
+                    <input type="number" step="0.01" min="0" max="1000" id="y2" name="y2" value=100>
                 </td>
                 <td>
                     <label for="yp">yp:</label>
-                    <input type="number" id="yp" name="yp" value=50>
+                    <input type="number" step="0.01" min="0" max="1000" id="yp" name="yp" value=50>
                 </td>
             </tr>
             <tr>
                 <td>
                     <label for="r0">r0:</label>
-                    <input type="number" id="r0" name="r0" value=255>
+                    <input type="number" step="0.01" min="0" max="255" id="r0" name="r0" value=255>
                 </td>
                 <td>
                     <label for="r1">r1:</label>
-                    <input type="number" id="r1" name="r1" value=0>
+                    <input type="number" step="0.01" min="0" max="255" id="r1" name="r1" value=0>
                 </td>
                 <td>
                     <label for="r2">r2:</label>
-                    <input type="number" id="r2" name="r2" value=0>
+                    <input type="number" step="0.01" min="0" max="255" id="r2" name="r2" value=0>
                 </td>
                 <td>P_r: <span id="p_r">xxx</span></td>
             </tr>
             <tr>
                 <td>
                     <label for="g0">g0:</label>
-                    <input type="number" id="g0" name="g0" value=0>
+                    <input type="number" step="0.01" min="0" max="255" id="g0" name="g0" value=0>
                 </td>
                 <td>
                     <label for="g1">g1:</label>
-                    <input type="number" id="g1" name="g1" value=0>
+                    <input type="number" step="0.01" min="0" max="255" id="g1" name="g1" value=0>
                 </td>
                 <td>
                     <label for="g2">g2:</label>
-                    <input type="number" id="g2" name="g2" value=255> 
+                    <input type="number" step="0.01" min="0" max="255" id="g2" name="g2" value=255> 
                 </td>
                 <td>P_g: <span id="p_g">xxx</span></td>
             </tr>
             <tr>
                 <td>
                     <label for="b0">b0:</label>
-                    <input type="number" id="b0" name="b0" value=0>
+                    <input type="number" step="0.01" min="0" max="255" id="b0" name="b0" value=0>
                 </td>
                 <td>    
                     <label for="b1">b1:</label>
-                    <input type="number" id="b1" name="b1" value=255>
+                    <input type="number" step="0.01" min="0" max="255" id="b1" name="b1" value=255>
                 </td>
                 <td>
                     <label for="b2">b2:</label>
-                    <input type="number" id="b2" name="b2" value=0>
+                    <input type="number" step="0.01" min="0" max="255" id="b2" name="b2" value=0>
                 </td>
                 <td>P_b: <span id="p_b">xxx</span></td>
             </tr>
