--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 text-align: left;
                 border: 1px solid rgb(0, 0, 0);
             }
+            canvas {
+                border: 1px solid black;
+            }
         </style>
     </head>
     <body>
