added github corner banner

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </style>
     </head>
     <body>
+        <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/RSchneyer/raster_calc" data-target="_blank" data-label="Check out the GitHub Corners repository!"></script>
         <h1>Steffen's Rasterization Method Calculator (EXTREMELY UNTESTED)</h1>
         <table>
             <tr>
