added broken draw path button

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                 <td><b>P_b:</b> <span id="p_b">xxx</span></td>
             </tr>
         </table>
-        <button id="calc" onclick="calc()">Calculate!</button>
+        <button id="calc" onclick="calc(false)">Calculate!</button>
+        <button id="drawpath" onclick="calc(true)">Draw Path (broken?)</button>
         <br><br>
 
         <div class="row">
