--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                 <td><b>P_b:</b> <span id="p_b">xxx</span></td>
             </tr>
         </table>
+        <form>
+            <label>Consider Points on triangle edges to not be in the triangle</label>
+            <input type="checkbox" id="edgePoint">
+        </form>
         <button id="calc" onclick="calc(false)">Calculate!</button>
         <button id="drawpath" onclick="calc(true)">Draw Path (broken?)</button>
         <br><br>
