Added part of zambrenos feature request

--- a/index.html
+++ b/index.html
@@ -198,8 +198,14 @@
                         <td>C8: <span id="c8">xxx</span></td>
                     </tr>
                     <tr> 
-                        <td>A_p: <span id="a_p">xxx</span></td>
+                        <td>A(0=>1=>P): <span id="a_p0">xxx</span></td>
+                    </tr>
+                    <tr> 
+                        <td>A(1=>2=>P): <span id="a_p1">xxx</span></td>
                     </tr>  
+                    <tr> 
+                        <td>A(2=>0=>P): <span id="a_p2">xxx</span></td>
+                    </tr>    
                     <tr>
                         <td>In Bounds? <span id="ib"></span></td>
                     </tr>
