Finished Zambreno's feature request

--- a/index.html
+++ b/index.html
@@ -200,11 +200,29 @@
                     <tr> 
                         <td>A(0=>1=>P): <span id="a_p0">xxx</span></td>
                     </tr>
+                    <tr>
+                        <td>C7_0: <span id="c7_0">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C8_0: <span id="c8_0">xxx</span></td>
+                    </tr>
                     <tr> 
                         <td>A(1=>2=>P): <span id="a_p1">xxx</span></td>
-                    </tr>  
+                    </tr> 
+                    <tr>
+                        <td>C7_1: <span id="c7_1">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C8_1: <span id="c8_1">xxx</span></td>
+                    </tr> 
                     <tr> 
                         <td>A(2=>0=>P): <span id="a_p2">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C7_2: <span id="c7_2">xxx</span></td>
+                    </tr>
+                    <tr>
+                        <td>C8_2: <span id="c8_2">xxx</span></td>
                     </tr>    
                     <tr>
                         <td>In Bounds? <span id="ib"></span></td>
