--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/RSchneyer/raster_calc" data-target="_blank" data-label="Check out the GitHub Corners repository!"></script>
         <h1>Steffen's Rasterization Method Calculator</h1>
         <h2><del>(EXTREMELY UNTESTED)</del> SOMEWHAT TESTED AND INSTRUCTOR APPROVED</h2>
+        <a href="axi.html">AXI DATA</a>
         <table>
             <tr>
                 <th>Point 0</th>
