--- a/axi.html
+++ b/axi.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+    <title>AXI Data Calculator</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
     <script src="axi.js"></script>
 </head>
 <body>
