--- a/axi.html
+++ b/axi.html
@@ -32,8 +32,8 @@
     <div>
         <div>Texture Hex: <span id="text_hex">xxx</span></div>
         <div>Normal Hex: <span id="norm_hex">xxx</span></div>
-        <div>Color Hex: <span id="color_hex">xxx</span></div>
-        <div>Position Hex: <span id="pos_hex">xxx</span></div><br>
+        <div>Color Hex (ABGR): <span id="color_hex">xxx</span></div>
+        <div>Position Hex (WZYX): <span id="pos_hex">xxx</span></div><br>
         <div>AXI Data Hex: <span id='axi'>xxx</span></div>
         <div>AXI Data Hex (slightly)Readable: <span id='axi_readable'>xx_xx</span></div>
     </div>
