--- a/axi.html
+++ b/axi.html
@@ -21,18 +21,37 @@
         <label for="y">Y val</label>
         <input type="number" id="y" name="y" value=-1><br>
         <label for="z">Z val</label>
-        <input type="number" id="z" name="z" value=0><br>
+        <input type="number" id="z" name="z" value=-.25><br>
         <label for="w">W val</label>
         <input type="number" id="w" name="w" value=1><br>
         <br>
         <button onclick="assembleData()">Generate</button>
-    <br>
-    <div>
-        <div>Texture Hex: <span id="text_hex">xxx</span></div>
-        <div>Normal Hex: <span id="norm_hex">xxx</span></div>
-        <div>Color Hex: <span id="color_hex">xxx</span></div>
-        <div>Position Hex: <span id="pos_hex">xxx</span></div><br>
-        <div>AXI Data Hex: <span id='axi'>xxx</span></div>
-        <div>AXI Data Hex (slightly)Readable: <span id='axi_readable'>xx_xx</span></div>
+    <br><br>
+    <div style="font-family: monospace;">
+        <H3>Input to Viewport</H2>
+        <table>
+            <tr><td>Texture Hex:</td><td><span id="vp_text_hex">xxx</span></td></tr>
+            <tr><td>Normal Hex:</td><td><span id="vp_norm_hex">xxx</span></td></tr>
+            <tr><td>Color Hex:</td><td><span id="vp_color_hex">xxx</span></td></tr>
+            <tr><td>Position Hex:</td><td><span id="vp_pos_hex">xxx</span></td></tr>
+        </table>
+        <br>
+        <div>AXI Data Hex: <span id="vp_axi">xxx</span></div>
+        <div>AXI Data Hex Readable: <span id="vp_axi_readable">xx_xx</span></div>
+    </div>
+    <br><br>
+    <div style="font-family: monospace;">
+        <h3>Input to Rasterizer</h2>
+        <table>
+            <tr><td>Converted X:</td><td><span id="rast_x">dd</span></td></tr>
+            <tr><td>Converted Y:</td><td><span id="rast_y">dd</span></td></tr>
+            <tr><td>Texture Hex:</td><td><span id="rast_text_hex">xxx</span></td></tr>
+            <tr><td>Normal Hex:</td><td><span id="rast_norm_hex">xxx</span></td></tr>
+            <tr><td>Color Hex:</td><td><span id="rast_color_hex">xxx</span></td></tr>
+            <tr><td>Position Hex:</td><td><span id="rast_pos_hex">xxx</span></td></tr>
+        </table>
+        <br>
+        <div>AXI Data Hex: <span id="rast_axi">xxx</span></div>
+        <div>AXI Data Hex Readable: <span id="rast_axi_readable">xx_xx</span></div>
     </div>
 </body>
