--- a/axi.html
+++ b/axi.html
@@ -2,32 +2,71 @@
 <head>
     <script src="axi.js"></script>
 </head>
-<body>
+<body style="font-family: monospace;">
     <h1>AXI Data Calculator</h1>
     <a href="index.html">Main Calc</a><br>
-        <p>Color input scale: 0 to 255</p>
-        <label for="r">R val</label>
-        <input type="number" id="r" name="r" value=255><br>
-        <label for="g">G val</label>
-        <input type="number" id="g" name="g" value=127><br>
-        <label for="b">B val</label>
-        <input type="number" id="b" name="b" value=0><br>
-        <label for="a">A val</label>
-        <input type="number" id="a" name="a" value=1><br>
-        <br>
-        <p>Position input scale: -1.0 to 1.0</p>
-        <label for="x">X val</label>
-        <input type="number" id="x" name="x" value=.75><br>
-        <label for="y">Y val</label>
-        <input type="number" id="y" name="y" value=-1><br>
-        <label for="z">Z val</label>
-        <input type="number" id="z" name="z" value=-.25><br>
-        <label for="w">W val</label>
-        <input type="number" id="w" name="w" value=1><br>
-        <br>
-        <button onclick="assembleData()">Generate</button>
+    <table>
+        <tr>
+            <td colspan="2">Color input scale: 0 to 255</td>
+            <td>&emsp;&emsp;</td>
+            <td colspan="2">Position input scale: -1.0 to 1.0</td>
+        </tr>
+        <tr>
+            <td><label for="r">R val</label></td>
+            <td><input type="number" id="r" name="r" value=255></td>
+            <td></td>
+            <td><label for="x">X val</label></td>
+            <td><input type="number" id="x" name="x" value=.75></td>
+        </tr>
+        <tr>
+            <td><label for="g">G val</label></td>
+            <td><input type="number" id="g" name="g" value=127></td>
+            <td></td>
+            <td><label for="y">Y val</label></td>
+            <td><input type="number" id="y" name="y" value=-1></td>
+        </tr>
+        <tr>
+            <td><label for="b">B val</label></td>
+            <td><input type="number" id="b" name="b" value=0></td>
+            <td></td>
+            <td><label for="z">Z val</label></td>
+            <td><input type="number" id="z" name="z" value=-.25></td>
+        </tr>
+        <tr>
+            <td><label for="a">A val</label></td>
+            <td><input type="number" id="a" name="a" value=1></td>
+            <td></td>
+            <td><label for="w">W val</label></td>
+            <td><input type="number" id="w" name="w" value=1></td>
+        </tr>
+        <tr>
+            <td>&emsp;</td>
+        </tr>
+        <tr></tr>
+        <tr>
+            <td colspan="2">Viewport size (Pixels)</td>
+        </tr>
+        <tr>
+            <td><label for="xmin">X min</label></td>
+            <td><input type="number" id="xmin" name="xmin" value=0></td>
+        </tr>
+        <tr>
+            <td><label for="xmax">X max</label></td>
+            <td><input type="number" id="xmax" name="xmax" value=1920></td>
+        </tr>
+        <tr>
+            <td><label for="ymin">Y min</label></td>
+            <td><input type="number" id="ymin" name="ymin" value=0></td>
+        </tr>
+        <tr>
+            <td><label for="ymax">Y max</label></td>
+            <td><input type="number" id="ymax" name="ymax" value=1080></td>
+        </tr>
+    </table>
+    <br>
+    <button onclick="assembleData()">Generate</button>
     <br><br>
-    <div style="font-family: monospace;">
+    <div>
         <H3>Input to Viewport</H2>
         <table>
             <tr><td>Texture Hex:</td><td><span id="vp_text_hex">xxx</span></td></tr>
@@ -37,10 +76,10 @@
         </table>
         <br>
         <div>AXI Data Hex: <span id="vp_axi">xxx</span></div>
-        <div>AXI Data Hex Readable: <span id="vp_axi_readable">xx_xx</span></div>
+        <div>AXI Data Hex Readable: <span id="vp_axi_readable">x_x_x</span></div>
     </div>
     <br><br>
-    <div style="font-family: monospace;">
+    <div>
         <h3>Input to Rasterizer</h2>
         <table>
             <tr><td>Converted X:</td><td><span id="rast_x">dd</span></td></tr>
@@ -52,6 +91,6 @@
         </table>
         <br>
         <div>AXI Data Hex: <span id="rast_axi">xxx</span></div>
-        <div>AXI Data Hex Readable: <span id="rast_axi_readable">xx_xx</span></div>
+        <div>AXI Data Hex Readable: <span id="rast_axi_readable">x_x_x</span></div>
     </div>
 </body>
