updated font cause this is my project

--- a/axi.html
+++ b/axi.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>AXI Data Calculator</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/comic-mono@0.0.1/index.css">
     <link rel="icon" type="image/png" href="favicon.png"/>
     <script src="axi.js"></script>
 </head>
-<body style="font-family: monospace;">
+<body style="font-family:Comic Mono;">
     <h1>AXI Data Calculator</h1>
     <a href="index.html">Main Calc</a><br>
     <table>
