--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Steffen's Rasterization Method Calculator</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/comic-mono@0.0.1/index.css">
         <link rel="icon" type="image/png" href="favicon.png"/>
         <script type="text/javascript" src="graphics.js"></script>
         <script type="text/javascript" src="math.js"></script>
@@ -38,7 +39,7 @@
             }
         </style>
     </head>
-    <body>
+    <body style="font-family:Comic Mono;">
         <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/RSchneyer/raster_calc" data-target="_blank" data-label="Check out the GitHub Corners repository!"></script>
         <h1>Steffen's Rasterization Method Calculator</h1>
         <h2><del>(EXTREMELY UNTESTED)</del> SOMEWHAT TESTED AND INSTRUCTOR APPROVED</h2>
