--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
         </table>
         <form>
             <label>Consider Points on triangle edges to not be in the triangle</label>
-            <input type="checkbox" id="edgePoint">
+            <input type="checkbox" id="edgePoint"><br>
+            <label>Inputs from -1.0 to 1.0 for coords, and 0.0 to 1.0 for colors</label>
+            <input type="checkbox" id="inputFormat">
         </form>
         <button id="calc" onclick="calc(false)">Calculate!</button>
         <button id="drawpath" onclick="calc(true)">Draw Path (broken?)</button>
