last commit doesnt work lol

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         <form>
             <label>Consider Points on triangle edges to not be in the triangle</label>
             <input type="checkbox" id="edgePoint"><br>
-            <label>Inputs from -1.0 to 1.0 for coords, and 0.0 to 1.0 for colors</label>
-            <input type="checkbox" id="inputFormat">
+            <!-- <label>Inputs from -1.0 to 1.0 for coords, and 0.0 to 1.0 for colors</label>
+            <input type="checkbox" id="inputFormat"> -->
         </form>
         <button id="calc" onclick="calc(false)">Calculate!</button>
         <button id="drawpath" onclick="calc(true)">Draw Path (broken?)</button>
