added github corner to all pages and link to disassembler page

--- a/axi.html
+++ b/axi.html
@@ -7,6 +7,7 @@
     <script src="index.js"></script>
 </head>
 <body style="font-family: monospace;" id="bod">
+    <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/RSchneyer/raster_calc" data-target="_blank" data-label="Check out the GitHub Corners repository!"></script>
     <h1>AXI Data Calculator</h1>
     <a href="index.html">Main Calc</a><br>
     <table>
