--- a/sgp_asm.html
+++ b/sgp_asm.html
@@ -5,7 +5,9 @@
     <script type="text/javascript" src="asm.js"></script>
 </head>
 <body style="font-family: monospace;" id="bod">
+    <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/RSchneyer/raster_calc" data-target="_blank" data-label="Check out the GitHub Corners repository!"></script>
     <h1>SGP Assembly Instruction Decoder</h1>
+    <a href="index.html">Raster Calc</a><br>
     <form>
         <label for="hex_instr">Instruction (hex)</label>
         <span>0x</span><input type="text" name="hex_instr" id="hex_instr">
