--- a/sgp_asm.html
+++ b/sgp_asm.html
@@ -14,14 +14,14 @@
     </form>
     <button onclick="decodeInstruction()">Decode Instruction</button>
     <div>
-        <span>Instruction mnemonic: <span id="mnemonic">xxx</span></span>
+        <span><b>Instruction mnemonic:</b> <span id="mnemonic">xxx</span></span>
         <br>
-        <span>Instruction description: <span id="desc">xxx</span></span>
+        <span><b>Instruction description:</b> <span id="desc">xxx</span></span>
         <br>
-        <span>Psuedocode: <span id="psuedo">xxx</span></span>
+        <span><b>Psuedocode:</b> <span id="psuedo">xxx</span></span>
         <br>
-        <span>Instruction: <span id="instr_str">xxx</span></span>
+        <span><b>Instruction:</b> <span id="instr_str">xxx</span></span>
         <br>
-        <span>Binary: <span id="bin_rep">xxxx</span></span>
+        <span><b>Binary:</b> <span id="bin_rep">xxxx</span></span>
     </div>
 </body>
