updated index, added disclaimer

--- a/assembler.html
+++ b/assembler.html
@@ -6,7 +6,7 @@
 </head>
 <body style="font-family: monospace;" id="bod">
     <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/RSchneyer/raster_calc" data-target="_blank" data-label="Check out the GitHub Corners repository!"></script>
-    <h1>SGP ISA Assembler</h1>
+    <h1>SGP ISA Assembler (WORK IN PROGRESS)</h1>
     <a href="index.html">Raster Calc</a><br>
     <form>
         <label for="hex_instr">Instruction to assemble</label>
